--- a/spring-boot-microservices-workshop/movie-catalog-service/pom.xml
+++ b/spring-boot-microservices-workshop/movie-catalog-service/pom.xml
@@ -36,6 +36,12 @@
 				</exclusion>
 			</exclusions>
 		</dependency>
+		<!-- https://mvnrepository.com/artifact/org.projectlombok/lombok -->
+		<dependency>
+		    <groupId>org.projectlombok</groupId>
+		    <artifactId>lombok</artifactId>
+		    <scope>provided</scope>
+		</dependency>
 	</dependencies>
 
 	<build>
