spring-boot-microservices-workshop - Modified all 3 services so as to register as Eureka clients.

--- a/spring-boot-microservices-workshop/movie-catalog-service/src/main/resources/application.properties
+++ b/spring-boot-microservices-workshop/movie-catalog-service/src/main/resources/application.properties
@@ -1,3 +1,5 @@
 server.port=8081
 ratingsurl=http://localhost:8083/ratingsdata/byrating/
 moviesurl=http://localhost:8082/movies/
+spring.application.name=movie-catalog-service
+eureka.client.serviceUrl.defaultZone=http://localhost:8076/eureka/
