--- a/spring-boot-microservices-workshop/movie-ratings-data-service/src/main/resources/application.properties
+++ b/spring-boot-microservices-workshop/movie-ratings-data-service/src/main/resources/application.properties
@@ -1,1 +1,3 @@
 server.port=8083
+spring.application.name=movie-ratings-data-service
+eureka.client.serviceUrl.defaultZone=http://localhost:8076/eureka/
