spring-boot-microservices-workshop - Modified maven-jar plugin version to handle pom Unknown error. Modified movie catalog service to use service discovery.

--- a/spring-boot-microservices-workshop/movie-catalog-service/src/main/resources/application.properties
+++ b/spring-boot-microservices-workshop/movie-catalog-service/src/main/resources/application.properties
@@ -1,5 +1,8 @@
 server.port=8081
-ratingsurl=http://localhost:8083/ratingsdata/byrating/
-moviesurl=http://localhost:8082/movies/
+#ratingsurl=http://localhost:8083/ratingsdata/byrating/
+#moviesurl=http://localhost:8082/movies/
+## Modified urls after enabling service discovery
+ratingsurl=http://movie-ratings-data-service/ratingsdata/byrating/
+moviesurl=http://movie-info-service/movies/
 spring.application.name=movie-catalog-service
 eureka.client.serviceUrl.defaultZone=http://localhost:8076/eureka/
