spring-boot-microservices-workshop - Modified to call moviedb from movie-info-service.

--- a/spring-boot-microservices-workshop/movie-info-service/src/main/resources/application.properties
+++ b/spring-boot-microservices-workshop/movie-info-service/src/main/resources/application.properties
@@ -1,3 +1,8 @@
 server.port=8082
 spring.application.name=movie-info-service
 eureka.client.serviceUrl.defaultZone=http://localhost:8076/eureka/
+##MovieDB
+moviedb.url=https://api.themoviedb.org/3/movie/
+api.key=1aa9d115f0d20a71812ae40d65945bb9
+
+logging.level.org.springframework.web.client=debug
