--- a/junit5-basics/pom.xml
+++ b/junit5-basics/pom.xml
@@ -34,6 +34,10 @@
           <groupId>org.apache.maven.plugins</groupId>
           <artifactId>maven-surefire-plugin</artifactId>
           <version>2.22.1</version>
+          <!-- <configuration>
+          	To include Math Tag only
+          	<groups>Math</groups>
+          </configuration> -->
         </plugin>
       </plugins>
     </pluginManagement>
