--- a/mockito/pom.xml
+++ b/mockito/pom.xml
@@ -9,7 +9,7 @@
     <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
     <maven.compiler.source>1.8</maven.compiler.source>
     <maven.compiler.target>1.8</maven.compiler.target>
-    <junit.jupiter.version>5.1.1</junit.jupiter.version>
+    <junit.jupiter.version>5.5.0</junit.jupiter.version>
   </properties> 
   <dependencies>
   	<!-- https://mvnrepository.com/artifact/org.junit.jupiter/junit-jupiter-engine -->
@@ -30,16 +30,16 @@
 	<dependency>
 	    <groupId>org.mockito</groupId>
 	    <artifactId>mockito-core</artifactId>
-	    <version>3.0.0</version>
+	    <version>2.28.2</version>
 	    <scope>test</scope>
 	</dependency>
 	<!-- https://mvnrepository.com/artifact/org.mockito/mockito-junit-jupiter -->
-	<dependency>
+	<!-- <dependency>
 	    <groupId>org.mockito</groupId>
 	    <artifactId>mockito-junit-jupiter</artifactId>
-	    <version>3.0.0</version>
+	    <version>2.23.0</version>
 	    <scope>test</scope>
-	</dependency>
+	</dependency> -->
   </dependencies>
   <build>
     <pluginManagement>
