--- a/SpringBoot-Course-API/pom.xml
+++ b/SpringBoot-Course-API/pom.xml
@@ -3,7 +3,7 @@
   <parent>
     <groupId>org.springframework.boot</groupId>
     <artifactId>spring-boot-starter-parent</artifactId>
-    <version>2.0.3.RELEASE</version>
+    <version>2.1.6.RELEASE</version>
   </parent>
   <groupId>com.vinu.springbootquickstart</groupId>
   <artifactId>SpringBoot-Course-API</artifactId>
@@ -15,6 +15,10 @@
 	<dependency>
 	    <groupId>org.springframework.boot</groupId>
 	    <artifactId>spring-boot-starter-web</artifactId>
+	</dependency>
+		<dependency>
+		<groupId>org.springframework.boot</groupId>
+		<artifactId>spring-boot-starter-security</artifactId>
 	</dependency>
   </dependencies>
 </project>
