--- a/SpringBoot-Course-API/pom.xml
+++ b/SpringBoot-Course-API/pom.xml
@@ -9,6 +9,9 @@
   <artifactId>SpringBoot-Course-API</artifactId>
   <version>0.0.1-SNAPSHOT</version>
   <name>Course-API</name>
+  <properties>
+  	<maven-jar-plugin.version>3.1.1</maven-jar-plugin.version>
+  </properties>
   <description>Course API with data in ArrayList</description>
     <dependencies>
 	<!-- https://mvnrepository.com/artifact/org.springframework.boot/spring-boot-starter-web -->
