--- a/SpringBoot-Course-API/src/main/resources/application.properties
+++ b/SpringBoot-Course-API/src/main/resources/application.properties
@@ -1,4 +1,4 @@
 
 #Override default creds
-spring.security.user.name=admin
-spring.security.user.password=admin
+#spring.security.user.name=admin
+#spring.security.user.password=admin
