--- a/SpringAOP/pom.xml
+++ b/SpringAOP/pom.xml
@@ -7,15 +7,12 @@
   <properties>
 
 		<!-- Generic properties -->
-		<java.version>1.6</java.version>
+		<java.version>1.8</java.version>
 		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
 		<project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
 
 		<!-- Spring -->
-		<spring-framework.version>3.2.3.RELEASE</spring-framework.version>
-
-		<!-- Hibernate / JPA -->
-		<hibernate.version>4.2.1.Final</hibernate.version>
+		<spring-framework.version>4.1.4.RELEASE</spring-framework.version>
 
 		<!-- Logging -->
 		<logback.version>1.0.13</logback.version>
@@ -46,9 +43,9 @@
 		</dependency>
 		<!-- https://mvnrepository.com/artifact/aspectj/aspectjrt -->
 		<dependency>
-		    <groupId>aspectj</groupId>
+		    <groupId>org.aspectj</groupId>
 		    <artifactId>aspectjrt</artifactId>
-		    <version>1.5.3</version>
+		    <version>1.9.2</version>
 		</dependency>
 		<!-- https://mvnrepository.com/artifact/org.aspectj/aspectjweaver -->
 		<dependency>
@@ -89,15 +86,7 @@
 			<version>${logback.version}</version>
 			<scope>runtime</scope>
 		</dependency>
-
-		<!-- Hibernate -->
-		<dependency>
-			<groupId>org.hibernate</groupId>
-			<artifactId>hibernate-entitymanager</artifactId>
-			<version>${hibernate.version}</version>
-		</dependency>
-
-		
+	
 		<!-- Test Artifacts -->
 		<dependency>
 			<groupId>org.springframework</groupId>
