--- a/JdbcDemo/pom.xml
+++ b/JdbcDemo/pom.xml
@@ -14,15 +14,28 @@
     <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
     <maven.compiler.source>1.8</maven.compiler.source>
     <maven.compiler.target>1.8</maven.compiler.target>
+    <spring-framework.version>4.1.4.RELEASE</spring-framework.version>
     <junit.jupiter.version>5.4.0</junit.jupiter.version>
   </properties>
 
   <dependencies>
+ 	<!-- Spring -->
+	<dependency>
+		<groupId>org.springframework</groupId>
+		<artifactId>spring-context</artifactId>
+		<version>${spring-framework.version}</version>
+	</dependency>
   	<!-- https://mvnrepository.com/artifact/org.postgresql/postgresql -->
 	<dependency>
   	  <groupId>org.postgresql</groupId>
    	  <artifactId>postgresql</artifactId>
    	  <version>42.2.5</version>
+	</dependency>
+	<!-- https://mvnrepository.com/artifact/org.springframework/spring-jdbc -->
+	<dependency>
+	    <groupId>org.springframework</groupId>
+	    <artifactId>spring-jdbc</artifactId>
+	    <version>${spring-framework.version}</version>
 	</dependency>
 	<!-- https://mvnrepository.com/artifact/org.hibernate/hibernate-core -->
 	<dependency>
