--- a/JdbcDemo/pom.xml
+++ b/JdbcDemo/pom.xml
@@ -50,6 +50,12 @@
 	    <version>1.18.10</version>
 	    <scope>provided</scope>
 	</dependency>
+	<!-- https://mvnrepository.com/artifact/commons-dbcp/commons-dbcp -->
+	<dependency>
+	    <groupId>commons-dbcp</groupId>
+	    <artifactId>commons-dbcp</artifactId>
+	    <version>1.4</version>
+	</dependency>
   	<!-- https://mvnrepository.com/artifact/org.junit.jupiter/junit-jupiter-engine -->
 	<dependency>
 	    <groupId>org.junit.jupiter</groupId>
