--- a/messenger/pom.xml
+++ b/messenger/pom.xml
@@ -54,6 +54,12 @@
             <artifactId>jersey-media-json-binding</artifactId>
         </dependency>
         -->
+        <!-- https://mvnrepository.com/artifact/org.projectlombok/lombok -->
+		<dependency>
+		    <groupId>org.projectlombok</groupId>
+		    <artifactId>lombok</artifactId>
+		    <version>1.18.10</version>
+		</dependency>
     </dependencies>
     <properties>
         <jersey.version>2.29</jersey.version>
