--- a/javaFundamentals/pom.xml
+++ b/javaFundamentals/pom.xml
@@ -21,7 +21,7 @@
 	<dependency>
 	  <groupId>org.apache.commons</groupId>
 	  <artifactId>commons-lang3</artifactId>
-	  <version>3.7</version>
+	  <version>3.11</version>
 	</dependency>
     <dependency>
       <groupId>junit</groupId>
@@ -34,5 +34,17 @@
 	    <artifactId>lombok</artifactId>
 	    <version>1.16.20</version>
 	</dependency>
+	<!-- JSON To Pojo -->
+	<dependency>  
+	    <groupId>org.jsonschema2pojo</groupId>  
+	    <artifactId>jsonschema2pojo-core</artifactId>  
+	    <version>0.4.35</version>  
+	</dependency>
+	<!-- https://mvnrepository.com/artifact/commons-codec/commons-codec -->
+	<dependency>
+	    <groupId>commons-codec</groupId>
+	    <artifactId>commons-codec</artifactId>
+	    <version>1.11</version>
+	</dependency>	
   </dependencies>
 </project>
