--- a/spring-boot-microservices-workshop/movie-catalog-service/pom.xml
+++ b/spring-boot-microservices-workshop/movie-catalog-service/pom.xml
@@ -36,6 +36,11 @@
 			<groupId>org.springframework.cloud</groupId>
 			<artifactId>spring-cloud-starter-netflix-eureka-client</artifactId>
 		</dependency>
+		<!-- To enable circuit breaker using Hytrix -->
+		<dependency>
+			<groupId>org.springframework.cloud</groupId>
+			<artifactId>spring-cloud-starter-netflix-hystrix</artifactId>
+		</dependency>
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-starter-test</artifactId>
