spring-boot-microservices-workshop - Added Hystrix to enable Circuit Breaker pattern.

--- a/spring-boot-microservices-workshop/movie-catalog-service/src/main/resources/application.properties
+++ b/spring-boot-microservices-workshop/movie-catalog-service/src/main/resources/application.properties
@@ -6,3 +6,5 @@ ratingsurl=http://movie-ratings-data-service/ratingsdata/user/
 moviesurl=http://movie-info-service/movies/
 spring.application.name=movie-catalog-service
 eureka.client.serviceUrl.defaultZone=http://localhost:8076/eureka/
+management.endpoints.web.exposure.include=* 
+#hystrix.stream
